:bug: [#59] "Content-Type" 헤더 허용